<resources>
    <string name="app_name">ToDo</string>
    <string name="text_size">32sp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="deadline">Deadline</string>
    <string name="importance">Importance</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
</resources>